@@ -7,8 +7,8 @@
 ATCPSDKI=	/GG/netinclude
 
 
-CC	=	gcc
-CFLAGS	=	-I$(ATCPSDKI) -m68020-60 -noixemul -I. -I../include -W -Wall
+CC	=	m68k-amigaos-gcc
+CFLAGS	=	-I$(ATCPSDKI) -m68020-60 -O2 -msoft-float -noixemul -g -I. -I../include -W -Wall
 
 OBJS = amigaos.c base64.c connect.c content_encoding.c cookie.c dict.c easy.c \
 	escape.c file.c formdata.c ftp.c getenv.c getinfo.c hash.c hostip.c   \
@@ -17,7 +17,7 @@ OBJS = amigaos.c base64.c connect.c content_encoding.c cookie.c dict.c easy.c \
 	ldap.c llist.c md5.c memdebug.c mprintf.c multi.c netrc.c parsedate.c \
 	progress.c security.c select.c sendf.c share.c speedcheck.c ssluse.c  \
 	strequal.c strtok.c telnet.c timeval.c transfer.c url.c version.c \
-	sslgen.c gtls.c
+	sslgen.c gtls.c strerror.c
 
 all:	$(OBJS:.c=.o)
 	ar cru libcurl.a $(OBJS:.c=.o)
